--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - apt: 
+        name: php
+        state: latest
     - uses: actions/checkout@v2
     - name: Build the site in the jekyll/builder container
       run: |
