--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -12,12 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - apt: 
-        name: php
-        state: latest
-    - uses: actions/checkout@v2
-    - name: Build the site in the jekyll/builder container
-      run: |
+     - uses: actions/checkout@v2
+     - name: Build the site in the jekyll/builder container
+       run: |
+        docker run apt install php
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
         jekyll/builder:latest /bin/bash -c "chmod 777 /srv/jekyll && jekyll build --future"
